app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capsule-app
  namespace: noel-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: capsule-app
  template:
    metadata:
      labels:
        app: capsule-app
    spec:
      containers:
      - name: capsule-app
        image: vasuvarshney07/vasu_varshney_fordocker-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: capsule-service
  namespace: noel-ns
spec:
  selector:
    app: capsule-app
  ports:
  - port: 82
    targetPort: 3000
  type: NodePort
