app-deploy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: noel-gateway
  namespace: noel-ns
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:     
          from: All

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-state
  namespace: retail-ns
  labels:
    app: mysql
spec:
  replicas: 1
  serviceName: mysql-service 
  selector:
    matchLabels:
      app: mysql
  volumeClaimTemplates:
    - metadata: 
        name: mysql-retail-vct
      spec:
        accessModes: [ReadWriteMany]
        storageClassName: nfs-csi-retail
        resources:
          requests:
            storage: 5Gi
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 1
  #     maxSurge: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: mysql-init-scripts
          configMap:
            name: mysql-init-config
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-retail-vct
              mountPath: /var/lib/mysql
            # - name: mysql-init-scripts
            #   mountPath: /docker-entrypoint-initdb.d
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: retail-ns
spec:
  selector:
    app: mysql
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
  

---


apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: retail-grant
  namespace: retail-ns
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: noel-ns
  to:
    - group: ""
      kind: Service


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-deploy
  namespace: retail-ns
  labels:
    app: retail
spec:
  replicas: 4
  selector:
    matchLabels:
      app: retail
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: retail
    spec:
      containers:
        - name: retail-container
          image: vasuvarshney07/vasu_varshney_fordocker-app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: retail-service
  namespace: retail-ns
spec:
  selector:
    app: retail
  ports:
    - port: 82
      targetPort: 3000
  type: NodePort

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retail-route
  namespace: noel-ns
spec:
  parentRefs:
    - name: noel-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: retail-service
          namespace: retail-ns
          port: 82
